First 2 Jobs Done  - Portfolio

--- a/Version 4/public_html/user/portfolio/index.html
+++ b/Version 4/public_html/user/portfolio/index.html
@@ -67,7 +67,79 @@
   </header>
 
   <section class="portfolio" id="portfolio">
-
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <h1 class="mt-3 text-center">
+                    Web Development Portfolio.
+                </h1>
+                <hr>
+            </div>
+            <!--Berry Smooth-->
+            <div class="col-6">
+                <h1 class="text-left">
+                    UX Developer.
+                </h1>
+                <h5 class="text-muted">
+                    Berry Smooth LLC
+                </h5>
+            </div>
+            <div class="col-6">
+                <h3 class="text-right" id="workdates">
+                    April 2018 - Current
+                </h3>
+            </div>
+            <div class="col-12 mt-3">
+                <p>
+                    This was my first project
+                    that started my Web Development track.
+                    This project was to make a website for a 
+                    friend of mine. The client was opening up a smoothie
+                    shop and asked me to make the site.
+                    Since the website created was not up to my liking,
+                    I keep on redesigning it,
+                    until I get the theme and colors just right!
+                    <br>
+                    <a href="http://berrysmooth.dx.am/">
+                        <b>
+                            The finished product can be viewed here.
+                        </b>
+                    </a>
+                </p>
+            </div><!--End Berry Smooth-->
+        </div>
+        <div class="row">
+            <div class="col-6 mt-5">
+                <h1 class="text-left">
+                    Web Developer.
+                </h1>
+                <h5 class="text-muted">
+                    D&H
+                </h5>
+            </div>
+            <div class="col-6 mt-5">
+                <h3 class="text-right" id="workdates">
+                    June 2018
+                </h3>
+            </div>
+            <div class="col-12">
+                <p>
+                    This project was a very simple and fast project.
+                    In this project,
+                    a client came to me with most of the UX/UI work done 
+                    for a website he wanted me to build. The client showed 
+                    me the plan for the website,
+                    and I just built it to his specs.
+                    <br>
+                    <a href="http://d-h.000webhostapp.com/">
+                        <b>
+                            The finished product can be viewed here.
+                        </b>
+                    </a>
+                </p>
+            </div>
+        </div><!--End Row/D&H-->
+    </div>
   </section>
 
   <!-- Bootstrap core JavaScript -->
