Web Dveelopment Section Complete - Portfolio

--- a/Version 4/public_html/user/portfolio/index.html
+++ b/Version 4/public_html/user/portfolio/index.html
@@ -78,7 +78,7 @@
             <!--Berry Smooth-->
             <div class="col-6">
                 <h1 class="text-left">
-                    UX Developer.
+                    UX/Full Stack Developer.
                 </h1>
                 <h5 class="text-muted">
                     Berry Smooth LLC
@@ -108,6 +108,7 @@
                 </p>
             </div><!--End Berry Smooth-->
         </div>
+        <!--D&H-->
         <div class="row">
             <div class="col-6 mt-5">
                 <h1 class="text-left">
@@ -139,7 +140,54 @@
                 </p>
             </div>
         </div><!--End Row/D&H-->
+        <!--Accessories WCS-->
+        <div class="row">
+            <div class="col-6 mt-5">
+                <h1 class="text-left">
+                    Full Stack Developer.
+                </h1>
+                <h5 class="text-muted">
+                    Accessories WCS
+                </h5>
+            </div>
+            <div class="col-6 mt-5">
+                <h3 class="text-right" id="workdates">
+                    July 2018
+                </h3>
+            </div>
+            <div class="col-12">
+                <p>
+                    The project presented here was the 
+                    most difficult for me.
+                    This didn't involve the page itself, 
+                    but the number of addons and other features
+                    that I wanted for the site.
+                    The site loaded in 7.61s and I needed
+                    to hit the goal of 3.5s,
+                    since any more time than that,
+                    and the potential customers
+                    may just exit the page.
+                    With minimization I managed a rough 3 second load time! 
+                    <br>
+                    <a href="http://accessorywcs.000webhostapp.com/">
+                        <b>
+                            The finished product can be viewed here.
+                        </b>
+                    </a>
+                </p>
+            </div>
+        </div><!--End Accessories WCS-->
     </div>
+  </section>
+
+  <section class="noweb bg-primary" id="noweb">
+      <div class="container">
+        <div class="row">
+            <div class="col-12">
+                
+            </div>
+        </div>
+      </div>
   </section>
 
   <!-- Bootstrap core JavaScript -->
