--- a/Version 4/public_html/user/portfolio/index.html
+++ b/Version 4/public_html/user/portfolio/index.html
@@ -184,10 +184,70 @@
       <div class="container">
         <div class="row">
             <div class="col-12">
-                
+                <h1 class="text-center">
+                    Non-Web Development Portfolio.
+                </h1>
+                <hr>
+            </div>
+            <div class="col-6">
+                <h1 class="text-left">
+                    Field Worker.
+                </h1>
+                <h5 class="text-muted">
+                    Coria Estates
+                </h5>
+            </div>
+            <div class="col-6">
+                <h3 class="text-right" id="workdates">
+                    June 2017 - August 2017 <br>
+                    June 2018 - July 2018
+                </h3>
+            </div>
+            <div class="col-12">
+                <p>
+                    This was a summer job that i've 
+                    had for two years now.
+                    I joined this job as a way to make money, 
+                    and have firsthand work experience.
+                    While I may not have liked it very much,
+                    it's one of the motivators to keep me 
+                    pushing to become a developer.
+                    We raised wires and selected which vines that were
+                    going to grow.
+                    This is much easier said than done.
+                    If any vines fell onto the wire,
+                    the amount of force needed to raise it,
+                    can easily >30lbs.
+                </p>
             </div>
         </div>
-      </div>
+        <div class="row">
+            <div class="col-6 mt-5">
+                <h1>
+                    Cashier.
+                </h1>
+                <h5 class="text-muted">
+                    Berry Smooth LLC
+                </h5>
+            </div>
+            <div class="col-6 mt-5">
+                <h3 class="text-right" id="workdates">
+                    July 2018 - Current
+                </h3>
+            </div>
+            <div class="col-12">
+                <p>
+                    This is a pretty self-explanatory 
+                    job. At Berry Smooth (Along with making the website)
+                    i'm working there.
+                    While my schedule does vary wildly,
+                    I take orders, and make them!
+                    My role does shift depending on what needs to be done,
+                    and when.
+                </p>
+            </div>
+        </div>
+    </div>
   </section>
 
   <!-- Bootstrap core JavaScript -->
