--- a/Version 4/index.html
+++ b/Version 4/index.html
@@ -3,7 +3,6 @@
 <head>
 
     <!--Google Tracking-->
-    <!--
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-122724690-1"></script>
     <script>
     window.dataLayer = window.dataLayer || [];
@@ -16,7 +15,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <!--meta http-equiv="refresh" content="0; url=public_html/index.html" />
+    <meta http-equiv="refresh" content="0; url=public_html/index.html" />
     <title>Brayan Quevedo - Redirection</title>
 
     <!--Bootstrap 4.1.2 CDN-->
