--- a/Version 4/index.html
+++ b/Version 4/index.html
@@ -15,7 +15,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta http-equiv="refresh" content="0; url=public_html/index.html" />
+    <meta http-equiv="refresh" content="0; url=https://bqlr.000webhostapp.com/" />
     <title>Brayan Quevedo - Redirection</title>
 
     <!--Bootstrap 4.1.2 CDN-->
